[Gabe] Mid-recoloring of UI and fixed alignment issues of boxes

--- a/main.css
+++ b/main.css
@@ -1,13 +1,16 @@
 body {
-	font-family: 'Lato', sans-serif;
-}
+	font-family: 'Rubik', sans-serif;
+	background: #e3e3e3;
+	}
 
 p, h1, h2 {
 	display: block;
+	color: #3b3a36;
 }
 
 h2 {
 	font-size: 1.1rem;
+	color: #3b3a36;
 }
 
 h3 {
@@ -16,9 +19,13 @@ h3 {
 	margin-bottom: 0;
 }
 
+input {
+	
+}
+
 .wrapper {
 	margin: 0 auto;
-	width: 60rem;
+	width: 63rem;
 	overflow: hidden;
 }
 
@@ -32,7 +39,8 @@ h3 {
 canvas {
     display: block;
 	float: left;
-	border: 1px solid black;
+	border: 1.5px solid #b3c2bf;
+	border-radius: 5px;
 }
 
 section{
@@ -46,13 +54,13 @@ section{
 }
 
 select {
-	border-radius: 3px;
+	border-radius: 5px;
 }
 
 .stepControlInactive{
 	background: white;
 	opacity: 0.1;
-	border-radius: 3px;
+	border-radius: 5px;
 	margin: .2rem 1rem;
 	margin-left: 0;
 	transition: .5s;
@@ -61,7 +69,7 @@ select {
 .stepControlActive{
 	background: lightGrey;
 	opacity: 1;
-	border-radius: 3px;
+	border-radius: 5px;
 	margin: .2rem 1rem;
 	margin-left: 0;
 	transition: .5s;
@@ -95,17 +103,17 @@ li {
 	display: inline;
 	text-decoration: none;
 	padding: 2px 6px;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .visualizerWrapper  {
-    width: 15rem;
+    width: 16rem;
 	float: left;
 }
 
 #visLogWrapper {
-	float: right;
-	width: 20rem;
+	float: left;
+	width: 19rem;
 	margin-right: .4rem;
 }
 
@@ -131,7 +139,8 @@ li {
 
 #stack, #memory {
 	display: inline-block;
-	border: 1px solid black;
+	border: 1.5px solid #b3c2bf;
+	border-radius: 5px;
 	width: 5.3rem;
 	height: 20rem;
 	margin: 0rem 0;
@@ -145,7 +154,8 @@ li {
 
 #visLog {
 	display: inline-block;
-	border: 1px solid black;
+	border: 1.5px solid #b3c2bf;
+	border-radius: 5px;
 	width: 100%;
 	height: 20rem;
 	margin: 0rem 0;
